{
    "name": "InputActions",
    "maps": [
        {
            "name": "CannonControl",
            "id": "2a3d3c1d-8118-4347-91d9-9e3ef5349494",
            "actions": [
                {
                    "name": "RotateBase",
                    "type": "Value",
                    "id": "50a47823-68bb-4035-9476-00bb5f6133e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateBarrel",
                    "type": "Value",
                    "id": "b4163f71-b3f6-4286-a3dc-79c9a69b729f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "6f22994d-0a09-4fdf-9bc7-739bb7ae3ade",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AdjustFirePower",
                    "type": "Value",
                    "id": "882164c6-2a1c-4465-9006-4abd544e8476",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "LeftRight",
                    "id": "1e3ac0b1-ecf5-40fb-aefb-00b4d046eec0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBase",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2a6e4320-df58-4f0e-8d13-3397a1a29c3b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBase",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "19a10ab8-3cc5-4d39-a057-3a1c13050792",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBase",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "TopDown",
                    "id": "8a70f081-2187-4e8b-8f99-4d011786bc55",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBarrel",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1f7938ea-ae2a-4431-8b37-1162d2a34456",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBarrel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "386023da-0c50-44b0-8059-c3420f7b3ea4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBarrel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "60e14fb2-a039-41b2-8238-073601457e7b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53940b6d-dc04-483d-8903-8cbd8a4929c2",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdjustFirePower",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}